k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grades-svc
  namespace: grades
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  # Matches POD LABELS, not the Deployment name.
  selector:
    app: grades-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
