k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grades-ingress
  namespace: grades
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - creamykitchen.com
      secretName: creamykitchen-tls
  rules:
    - host: creamykitchen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grades-svc
                port:
                  number: 80
